2007-08-01  Brian Matherly <brian@gramps-project.org>
	* src/plugins/IndivComplete.py: Reset bibliography between people.

2007-08-01  Brian Matherly <brian@gramps-project.org>
	* src/plugins/EndOfLineReport.py: Add generations and relationships
	
2007-07-31  Jérôme <romjerome@yahoo.fr>
	* src/GrampsDbUtils/gedcomexport.glade: use UTF-8 instead of UNICODE

2007-07-30  Don Allingham  <don@gramps-project.org>
	* src/DbLoader.py (DbLoader.do_import): catch unicode encoding errors

2007-07-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: assign inline note to the referencing object
	* src/GrampsDbUtils/_GedcomLex.py: fix UNKNOWN gender

2007-07-29  Brian Matherly <brian@gramps-project.org>
	* src/docgen/AsciiDoc.py: Make column spans work.

2007-07-29  Brian Matherly <brian@gramps-project.org>
	* src/plugins/EndOfLineReport.py: Add End of Line report
	* src/plugins/Makefile.in: Add EndOfLineReport.py
	* po/POTFILES.in: Add EndOfLineReport.py

2007-07-29  Don Allingham  <don@gramps-project.org>
	* src/Merge/_MergePerson.py (MergePeople.copy_note): convert to the
	new notelist format (#0001130)

2007-07-29  Brian Matherly <brian@gramps-project.org>
	* src/plugins/MarkerReport.py: Typo.

2007-07-29  Brian Matherly <brian@gramps-project.org>
	* src/plugins/MarkerReport.py: Change the way marker types are collected.

2007-07-28  Brian Matherly <brian@gramps-project.org>
	* src/plugins/MarkerReport.py: Enhanced
	* src/Filters/Rules/Event/_HasMarkerOf.py: Added
	* src/Filters/Rules/Event/__init__.py: Add _HasMarkerOf.py
	* src/Filters/Rules/Event/Makefile.am: Add _HasMarkerOf.py
	* src/Filters/Rules/Note/_HasMarkerOf.py: Added
	* src/Filters/Rules/Note/__init__.py: Add _HasMarkerOf.py
	* src/Filters/Rules/Note/Makefile.am: Add _HasMarkerOf.py
	* po/POTFILES.in: Add _HasMarkerOf.py for Events and Notes

2007-07-27  Don Allingham  <don@gramps-project.org>
	* src/ListModel.py: change __connect_model back to connect_model
	