@@ -1,3 +1,6 @@
+2007-08-02  Brian Matherly <brian@gramps-project.org>
+	* src/plugins/EndOfLineReport.py: Remove relationships and places
+
 2007-08-01  Brian Matherly <brian@gramps-project.org>
 	* src/plugins/IndivComplete.py: Reset bibliography between people.
 
